fix spacing

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ section {
     margin: 0 10px;
 }
 
-image-container {
+.image-container {
     text-align: center;
 }
 
